Resolved mobile responsive bug with increased alignment and overall UI improvement

--- a/src/components/about/styles.scss
+++ b/src/components/about/styles.scss
@@ -69,8 +69,7 @@
   }
 }
 
-
-html[data-theme='dark'] {
+html[data-theme="dark"] {
   .aboutContainer {
     background-color: #242526;
   }
